Stream Operation files added.