@@ -1,5 +1,6 @@
 package fubnctionalprogramming;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.function.BinaryOperator;
 import java.util.function.Consumer;
@@ -24,7 +25,7 @@ public class FP03FunctionalInterfaces {
 	@SuppressWarnings("unused")
 	public static void main(String[] args) {
 		
-		List<Integer> numbers = List.of(12, 9, 13, 4, 6, 2, 4, 12, 15);
+		List<Integer> numbers = Arrays.asList(12, 9, 13, 4, 6, 2, 4, 12, 15);
 				
 		Predicate<Integer> isEvenPredicate = x -> x%2==0;
 		
